# XChat

./: .gitignore  README.md  pyproject.toml
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  xchat-tor.desktop  xchat-tor.postinst.debhelper  xchat-tor.prerm.debhelper  xchat-tor.substvars
debian/xchat-tor/DEBIAN/: control  md5sums  postinst  prerm
debian/xchat-tor/usr/lib/python3/dist-packages/xchat/: config.py
debian/xchat-tor/usr/lib/python3/dist-packages/xchat_tor-0.9b0.dist-info/: METADATA
debian/xchat-tor/usr/share/pixmaps/xchat-tor.xpm/: xchat-tor.xpm
scripts/: build_deb.sh
tests/: test_config.py  test_protocol.py  test_state.py
xchat/: config.py  gui.py  main.py  network.py  state.py
xchat_tor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
